[project]
name = "py_trees"
version = "2.5.0"
description = "pythonic implementation of behaviour trees"
authors = [
    { name = "Daniel Stonier" },
    { name = "Naveed Usmani" },
    { name = "Michal Staniaszek" },
]
maintainers = [
    { name = "Daniel Stonier", email = "d.stonier@gmail.com" },
    { name = "Sebastian Castro", email = "sebas.a.castro@gmail.com" },
]
readme = "README.md"
license = { text = "BSD" }
# NOTE: deliberately omitted. `colcon build` (ament_python) introspects setup.py via
# colcon-python-setup-py, which repr()s + ast.literal_eval()s the setuptools metadata.
# setuptools merges this PEP 621 field as a packaging.SpecifierSet, whose repr
# (`<SpecifierSet(...)>`) is not a valid literal and breaks the colcon build.
# requires-python = ">=3.10,<4.0"
keywords = ["py_trees", "py-trees", "behaviour-trees"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "pydot>=1.4",
]

[project.urls]
Homepage = "https://github.com/splintered-reality/py_trees"
Repository = "https://github.com/splintered-reality/py_trees"
Documentation = "https://py-trees.readthedocs.io/en/devel/"

[project.scripts]
py-trees-render = "py_trees.programs.render:main"
py-trees-demo-action-behaviour = "py_trees.demos.action:main"
py-trees-demo-behaviour-lifecycle = "py_trees.demos.lifecycle:main"
py-trees-demo-blackboard = "py_trees.demos.blackboard:main"
py-trees-demo-blackboard-namespaces = "py_trees.demos.blackboard_namespaces:main"
py-trees-demo-blackboard-remappings = "py_trees.demos.blackboard_remappings:main"
py-trees-demo-context-switching = "py_trees.demos.context_switching:main"
py-trees-demo-display-modes = "py_trees.demos.display_modes:main"
py-trees-demo-dot-graphs = "py_trees.demos.dot_graphs:main"
py-trees-demo-either-or = "py_trees.demos.either_or:main"
py-trees-demo-eternal-guard = "py_trees.demos.eternal_guard:main"
py-trees-demo-logging = "py_trees.demos.logging:main"
py-trees-demo-pick-up-where-you-left-off = "py_trees.demos.pick_up_where_you_left_off:main"
py-trees-demo-ports-basic = "py_trees.demos.ports.basic:main"
py-trees-demo-ports-nested-subtrees = "py_trees.demos.ports.nested_subtrees:main"
py-trees-demo-ports-remapping = "py_trees.demos.ports.remapping:main"
py-trees-demo-ports-xml-tree = "py_trees.demos.ports.xml_tree:main"
py-trees-demo-selector = "py_trees.demos.selector:main"
py-trees-demo-sequence = "py_trees.demos.sequence:main"
py-trees-demo-tree-stewardship = "py_trees.demos.stewardship:main"

# Development dependencies (PEP 735). Install everything with `uv sync`.
[dependency-groups]
test = [
    "pytest>=7.1",
    "pytest-console-scripts>=1.3",
    "pytest-cov>=3.0.0",
]
lint = [
    "ruff>=0.6",
]
types = [
    "ty>=0.0.1a1",
]
docs = [
    "sphinx<6",
    "sphinx-rtd-theme>=1.1",
    "sphinx-argparse>=0.4",
]
dev = [
    { include-group = "test" },
    { include-group = "lint" },
    { include-group = "types" },
    { include-group = "docs" },
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["py_trees"]

[tool.coverage.run]
source = ["py_trees"]
# Explore conditional branches (important):
#   https://coverage.readthedocs.io/en/latest/branch.html#branch
branch = true

###########################
# Ruff: formatter + linter
###########################

[tool.ruff]
line-length = 120
# Keep in step with the requires-python floor so pyupgrade never rewrites to syntax
# (e.g., PEP 695 generics) that won't parse on the oldest supported python.
target-version = "py310"
include = ["py_trees/**/*.py", "tests/**/*.py", "docs/examples/**/*.py"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import ordering, replaces usort)
    "D",   # pydocstyle (docstrings, replaces flake8-docstrings)
    "B",   # flake8-bugbear (bugs & design beyond pep8)
    "UP",  # pyupgrade (modernize syntax for the target python)
]
ignore = [
    "D105",  # magic method docstrings
    "D107",  # prefer documenting __init__ args in the class docstring
]

[tool.ruff.lint.pydocstyle]
# Sphinx-style docstrings; pep257 convention relaxes the conflicting one-liner
# rules (e.g. D203/D212/D213) that previously lived in the flake8 ignore list.
convention = "pep257"

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
# Relax docstring & assert checks in the tests dir.
"tests/*" = ["D", "S101"]
# Re-exports (`from . import ...`) in package __init__ files.
"py_trees/__init__.py" = ["F401"]

##########################
# ty: static type checker
##########################

[tool.ty.environment]
python-version = "3.10"

[tool.ty.src]
include = ["py_trees", "tests"]

[tool.ty.rules]
# ty (still pre-1.0) conservatively refuses to call attributes typed as a bare `typing.Callable` ("its signature is not known").
# The py_trees comparison expressions store exactly such callables, so this rule is pure noise here.
call-top-callable = "ignore"
# Many pre-existing `# type: ignore[<mypy-code>]` comments use mypy's error codes, which ty does not recognise; don't flag them as redundant.
unused-ignore-comment = "ignore"
